Title name update

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="FariaNotes. The only note app you need." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Testing Change</title>
+    <title>FariaNotes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
